[apps/web] show tooltips in a portal to prevent overflow issues

--- a/packages/ui/src/Tooltip/index.module.scss
+++ b/packages/ui/src/Tooltip/index.module.scss
@@ -1,30 +1,25 @@
 @import '../colors.scss';
 
 .tooltip {
-  position: relative;
-}
-
-.tooltip::after {
   background-color: black;
-  bottom: calc(100% + 12px);
   border-radius: 2px;
-  box-shadow: 0 0 1px 2px $color-gray-200;
+  box-shadow: 0 2px 4px $color-gray-200;
   color: white;
-  content: attr(data-tooltip);
   font-size: 12px;
-  font-weight: 500;
-  left: 50%;
-  opacity: 0;
+  font-weight: 600;
+  opacity: 1;
   padding: 6px 8px;
   pointer-events: none;
   position: absolute;
-  transform: translateX(-50%);
-  transition: opacity 0.1s ease-in;
   white-space: nowrap;
   width: auto;
   z-index: 10;
 }
 
-.tooltip:hover::after {
-  opacity: 1;
+.top {
+  transform: translateX(-50%);
+}
+
+.right {
+  transform: translateY(3px);
 }
